[package]
name = "roolz"
description = "A rules engine"
license = "Apache-2.0"
documentation = "https://github.com/lavignes/roolz"
homepage = "https://github.com/lavignes/roolz"
repository = "https://github.com/lavignes/roolz"
version = "0.1.0"
authors = ["lavignes <scott.h.lavigne@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
simple_logger = "1.9.0"

async-ctrlc = "1.2"
async-stream = "0.3"

tonic = "0.3"
prost = "0.6"

futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream"] }

notify = "4.0"

clap = "3.0.0-beta.2"

uuid = { version = "0.8.1", features = ["v4"] }

[build-dependencies]
glob = "0.3"
tonic-build = "0.3"